# NAIL

./: .gitignore  README.md  plot.ipynb  pyproject.toml  requirements.txt
data/: download_gsm8k.py  download_tinygsm.py  execute_tinygsm.py  rollout.py
eval/: eval_gsm8k.py  eval_lora_ckpts_gsm8k.py
gsm/: README.md  forward_lora.py  gsm_utils.py  mixed_lora.py  offline_bc_lora.py  reverse_lora.py  run_NailF.sh  run_NailMixed.sh  run_NailR.sh  run_OpdF.sh  run_OpdR.sh  run_forward_lora.sh  run_offline_bc_lora.sh  run_reverse_lora.sh  train.py
gsm/configs/: nail_f.yaml  nail_mixed.yaml  nail_r.yaml  offline_bc.yaml  opd_f.yaml  opd_r.yaml
gsm/data/: download_tinygsm.py  rollout.py  teacher_rollout.py
gsm/eval/: eval.py  eval_gsm8k.py  eval_lora_adapter.py  eval_lora_ckpts_gsm8k.py  gsm8k_utils.py
gsm/scripts/: train.sh
gsm/trainers/: forward_kl.py  mixed_kl.py  offline_bc.py  reverse_kl.py  vllm_on_policy_rollout.py
gsm/vllm/: forward_lora_vllm.py  mixed_lora_vllm.py  reverse_lora.py  reverse_lora_vllm.py  run_NailMixed_vllm.sh  run_forward_lora_vllm.sh  run_reverse_lora_vllm.sh  vllm_rollout.py
modadd/: README.md  model.py
modadd/data/common/: eval.py  offline_dataset.py  offline_render.py  prompt_bank.py  random_suffix_noise.py  target_spans.py
modadd/data/modular_addition/: generate_noisy_rollouts.py  offline_render.py  prompt_bank.py  task.py
modadd/data/synthetic/: offline_dataset.py  offline_render.py  random_suffix_noise.py
modadd/hydra_configs/: config.yaml
modadd/hydra_configs/experiment/: modadd_base.yaml  modadd_cot.yaml  modadd_noisy_bc.yaml
modadd/hydra_configs/logging/: disabled.yaml  enabled.yaml
modadd/hydra_configs/optim/: expert.yaml  offline_bc.yaml
modadd/hydra_configs/pipeline/: pretrain.yaml
modadd/hydra_configs/task/: modadd_nail.yaml  modadd_noisy_offline.yaml  modadd_noisy_offline_p7_m21.yaml  modadd_noisy_render.yaml  modadd_opd.yaml
modadd/nanogpt/: config_schema.py  run.py
modadd/nanogpt/methods/: __init__.py  student_prefix.py
modadd/nanogpt/pipelines/: __init__.py
modadd/nanogpt/trainers/: configs.py  native_student_prefix.py
modadd/nanogpt/utils/: resolvers.py
modadd/nanogpt/workers/: pretrain_body.py
modadd/scripts/: train.sh
output/tinygsm_400k/obc_lora_r128_gemma270m_it_on_gemma3_1b_it_t1p0_n1_pure_maxlen512_seed42/: ckpt_eval_summary.json  config.json
output/tinygsm_400k/obc_lora_r128_gemma270m_it_on_gemma3_1b_it_t1p0_n1_pure_maxlen512_seed43/: ckpt_eval_summary.json  config.json
output/tinygsm_400k/obc_lora_r128_gemma270m_it_on_gemma3_1b_it_t1p0_n1_pure_maxlen512_seed44/: ckpt_eval_summary.json  config.json
output/tinygsm_400k/sopd_lora_r128_gemma270m_it_gemma3_1b_it_sgreedy_et1p0_on_gemma3_1b_it_t1p0_n1_pure_maxlen512_seed42/: ckpt_eval_summary.json  config.json  partial_ckpt_eval_summary.json
trainer_real/: TM_opd_lora.py  forward_lora.py  gsm_utils.py  mixed_lora.py  offline_bc_lora.py  reverse_lora.py  run_NailF.sh  run_NailMixed.sh  run_NailR.sh  run_OpdF.sh  run_OpdR.sh  run_TM_opd_lora.sh  run_forward_lora.sh  run_offline_bc_lora.sh  run_reverse_lora.sh  run_simple_opd_lora.sh  simple_opd_lora.py
(+11 files in other folders)
