[project]
name = "nail"
version = "0.1.0"
description = "Reference implementation for Noise-Aware Imitation Learning."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==1.13.0",
    "datasets==4.8.3",
    "einops==0.8.2",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "matplotlib==3.10.8",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "pandas==3.0.1",
    "peft==0.18.1",
    "pyyaml==6.0.3",
    "safetensors==0.7.0",
    "sentencepiece==0.2.1",
    "submitit==1.5.3",
    # CUDA runtime libraries are provided transitively by these PyTorch CUDA
    # 12.8 wheels. Do not add `nvidia-cuda-runtime>=13`; that would introduce
    # libcudart.so.13 into this CUDA-12 environment.
    "torch==2.8.0+cu128",
    "torchaudio==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "tqdm==4.67.3",
    "transformers==5.8.1",
    "trl==0.29.1",
    # vLLM is pinned to a CUDA-12 wheel artifact in [tool.uv.sources] below.
    # The 0.20.2 PyPI wheel is CUDA-13-linked, so we use the latest older wheel
    # we verified to link against libcudart.so.12.
    "vllm==0.10.2",
    "wandb==0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel==7.2.0",
]

[tool.uv]
package = false
index-strategy = "unsafe-best-match"
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
vllm = { url = "https://files.pythonhosted.org/packages/a2/1a/365479f413e7408b314c0237d6c929569874d5c002bc7c8b5a7fbf40c7d9/vllm-0.10.2-cp38-abi3-manylinux1_x86_64.whl" }
torch = [
    { index = "pytorch-cu128" },
]
torchaudio = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]
